<resources>
    <string name="app_name">Paint Studio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="start_now">New</string>
    <string name="Brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="Paint">Paint</string>



    <string name="digital_drawing_is_when_a_drawing_is_created_using_graphics_software_instead_of_using_a_pencil_and_paper_digital_artists_draw_with_a_tablet_or_a_computer_along_with_a_device_such_as_a_mouse_or_a_stylus_digital_drawing_programs_offer_features_such_as_layers_brush_sets_color_palettes_rulers_and_guides_and_pressure_sensitive_strokes">Digital drawing is when a drawing is created using graphics software. Instead of using a pencil and paper, digital artists draw with a tablet or a computer, along with a device such as a mouse or a stylus. Digital drawing programs offer features such as layers, brush sets, color palettes, rulers and guides, and pressure-sensitive strokes .......</string>
    <string name="drawing_and_painting_software_lets_designers_architects_and_concept_artists_sketch_ideas_quickly_and_create_stunning_illustrations_professional_drawing_tools_with_a_beautiful_interface_ideal_for_those_on_the_go_designed_for_both_stylus_and_touch_input">Drawing_and_painting_software_lets_designers_architects_and_concept_artists_sketch_ideas_quickly_and_create_stunning_illustrations_professional_drawing_tools_with_a_beautiful_interface_ideal_for_those_on_the_go_designed_for_both_stylus_and_touch_input </string>








    <string name="about_o">Md.Ramim Hossain\nEmail:ramim.cse.info@gmail.com</string>
    <string name="about_t">I\'m an Android And ios Mobile App and Game developer.Passionate by mobile technologies. | Open Source Contributor 🔥 | Researcher 🔰 | Tech Writer ✍️</string>


</resources>