<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:background="#000000"
    android:orientation="vertical"

    >


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_gravity="center">


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/new_btn"
            android:contentDescription="@string/start_now"
            android:src="@drawable/add"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/draw_btn"
            android:contentDescription="@string/Brush"
            android:src="@drawable/brush"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/eraser_btn"
            android:contentDescription="@string/erase"
            android:src="@drawable/eraserl"/>


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/save_btn"
            android:contentDescription="@string/save"
            android:src="@drawable/save"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/share_btn"
            android:contentDescription="Share"
            android:src="@drawable/share"/>
    </LinearLayout>




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/paint_colors"
        android:layout_gravity="center"
        android:orientation="horizontal">



         <ImageButton
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_margin="2dp"
             android:background="#FF660000"
             android:contentDescription="@string/Paint"
            android:onClick="paintClicked"
             android:tag="#FF660000"
             android:src="@drawable/paint"
             tools:ignore="OnClick" />

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="#FFFF0000"
            android:tag="#FFFF0000"
            android:contentDescription="@string/Paint"
            android:onClick="paintClicked"
            android:src="@drawable/paint"/>


        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="#FFFF6600"
            android:tag="#FFFF6600"
            android:contentDescription="@string/Paint"
            android:onClick="paintClicked"
            android:src="@drawable/paint"/>
        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="#FFFFCC00"
            android:tag="#FFFFCC00"
            android:contentDescription="@string/Paint"
            android:onClick="paintClicked"
            android:src="@drawable/paint"/>


        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="#FF009900"
            android:tag="#FF009900"
            android:contentDescription="@string/Paint"
            android:onClick="paintClicked"
            android:src="@drawable/paint"/>


        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="#FF009999"
            android:tag="#FF009999"
            android:contentDescription="@string/Paint"
            android:onClick="paintClicked"
            android:src="@drawable/paint"/>



        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="#FF0000ff"
            android:tag="#FF0000ff"
            android:contentDescription="@string/Paint"
            android:onClick="paintClicked"
            android:src="@drawable/paint"/>

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="#FF990099"
            android:tag="#FF990099"
            android:contentDescription="@string/Paint"
            android:onClick="paintClicked"
            android:src="@drawable/paint"/>


        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="#FFFF6666"
            android:tag="#FFFF6666"
            android:contentDescription="@string/Paint"
            android:onClick="paintClicked"
            android:src="@drawable/paint"/>


        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="#FFFFFFFF"
            android:tag="#FFFFFFFF"
            android:contentDescription="@string/Paint"
            android:onClick="paintClicked"
            android:src="@drawable/paint"/>

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:background="#FF787878"
            android:tag="#FF787878"
            android:contentDescription="@string/Paint"
            android:onClick="paintClicked"
            android:src="@drawable/paint"/>
    </LinearLayout>
    <com.example.drawingstudio.DrawingView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:id="@+id/drawing"
        android:layout_weight="5"
        android:background="#000000"/>


</LinearLayout>